docs: fix README.md